--- a/www/views/commons/footer.html
+++ b/www/views/commons/footer.html
@@ -16,6 +16,7 @@
         <a class="button button-clear" ng-href="#/dashboard/user/{{userA._id}}" translate>Footer_Compute</a>
     </div>
     <span style="float:right;font-size:8px;opacity:0.2"><span app-version></span></span>
+    <span style="float:right;font-size:8px;opacity:0.2">{{navAppOnlineLevel()}}</span>
 </footer>
 
 
