--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -64,7 +64,7 @@
                                 </button>
                             </div>
 
-                            <br><br><span style="float:right;font-size:10px;"><span app-version></span></span>
+                            <br><br><span style="float:right;font-size:10px;"><span app-version></span> {{navAppOnlineLevel()}}</span>
 
 
                         </form>
