--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <ion-view view-title="">
     <ion-content>
-        <div class="box" style="position: relative;height: 100%;text-align: center;">
-            <img src="img/login/screen01.gif" style="width:100%; max-width:500px;">
-        </div>
-        <h2 style="
-            text-align: center;
-            width: 100%;
-            font-family: cleanator;
-        " translate>for Better for Dust</h2>
 
-        <article class="container">
+        <div ng-if="!loginInitSpinnerStopped"
+             mle-animateshow="!loginInitSpinnerStopped"
+             after-show="afterNavigationInitSpinnerShow()"
+             after-hide="afterNavigationInitSpinnerHide()">
+            <div ng-include="'views/commons/computeChore.html'"></div>
+        </div>
+
+        <article ng-if="loginInitSpinnerStopped" class="container">
+
+            <div class="box" style="position: relative;height: 100%;text-align: center;">
+                <img src="img/login/screen01.gif" style="width:100%; max-width:500px;">
+            </div>
+            <h2 style='text-align: center;width: 100%;font-family: cleanator;' translate>for Better for Dust</h2>
+
 
             <div class="row responsive-md">
                 <div class="col hidden-xs">&nbsp;</div>
@@ -53,6 +58,14 @@
 
 
                                 </label>
+
+                                <div class="alert alert-warning alert-dismissible fade in" role="alert"
+                                     ng-repeat="error in loginErrMsgs">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                    {{error}}
+                                </div>
                             </div>
 
 
