test ok on login messages

--- a/www/views/dashboard/dashboardUser.html
+++ b/www/views/dashboard/dashboardUser.html
@@ -164,7 +164,7 @@
 
 
                         <button ng-show="isTodayGroup" class="button button-dark"
-                                ng-click="dashboardTerminateHistoric(historic);"
+                                ng-click="dashboardTerminateHistoric(historic); dashboardModalIndicleanator(true)"
                                 style="margin-top:20px;">
                             <small translate>Terminated</small>
                         </button>
