--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -59,12 +59,27 @@
 
                                 </label>
 
-                                <div class="alert alert-warning alert-dismissible fade in" role="alert"
-                                     ng-repeat="error in loginErrMsgs">
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">×</span>
-                                    </button>
-                                    {{error}}
+                                <div class="card" ng-show="loginErrCode == 'loginBadCredential'">
+                                    <div class="item item-assertive item-divider" translate>Bad login/password.</div>
+                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
+                                        {{error}}
+                                    </div>
+                                </div>
+                                <div class="card" ng-show="loginErrCode == 'loginBadConnection'">
+                                    <div class="item item-assertive item-divider" translate>Authentication service is
+                                        not reacheable, please contact support@miapp.io
+                                    </div>
+                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
+                                        {{error}}
+                                    </div>
+                                </div>
+                                <div class="card" ng-show="loginErrCode == 'loginNoConnection'">
+                                    <div class="item item-assertive item-divider" translate>No connection, please verify
+                                        your network.
+                                    </div>
+                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
+                                        {{error}}
+                                    </div>
                                 </div>
                             </div>
 
