--- a/www/views/user/modals.html
+++ b/www/views/user/modals.html
@@ -6,13 +6,13 @@
     <ion-content>
         <div class="list">
 
-            <h4 class="item item-list">
-                <i class="glyphicon glyphicon-warning"></i>
+            <h4 class="item item-list  item-text-wrap">
+                <i class="icon ion-alert-circled"></i>
                 <span translate>Changing your email means logout and loosing this Cleanator session</span>
+                <span translate>ModalUserWarningLogout</span>
             </h4>
 
-            <div class="item item-list">
-                <label translate>ModalUserWarningLogout</label>
+            <div class="item item-list item-text-wrap">
                 <button type="button" class="button button-block button-assertive" ng-click="closeModal();logout()"
                         translate>
                     UserLogout
