--- a/www/views/chore/categoryDetail.html
+++ b/www/views/chore/categoryDetail.html
@@ -6,7 +6,8 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
         <button class="button clear" style="margin-left:20px;" disabled>
-            <img src="{{getChoreCategoryThumbPath(choreToEdit[choreCols.category])}}" class="img-circle" height="30px"/>
+            <img src="{{dashboardGetChoreCategoryThumbPath(choreToEdit[choreCols.category])}}" class="img-circle"
+                 height="30px"/>
         </button>
     </ion-nav-buttons>
     <ion-content class="">
