--- a/www/views/chore/choreModalCategory.html
+++ b/www/views/chore/choreModalCategory.html
@@ -39,7 +39,7 @@
                     <div class="col-xs-12" ng-show="dashboardIndicatorShowResetVar">
                         <a class="btn col-xs-12" disabled><span ng-show="dashboardIndicatorLastResetDate">Last reset: {{dashboardIndicatorLastResetDate}}</span></a>
                         <a class="btn btn-warning col-sm-4 col-sm-offset-4 col-xs-12" data-dismiss="modal"
-                           ng-click="dashboardIndicatorReset();dashboardModalIndicleanator(true)">Clean History</a>
+                           ng-click="dashboardIndicatorReset()">Clean History</a>
                     </div>
                 </div>
 
