--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -17,6 +17,27 @@
             <h2 style='text-align: center;width: 100%;font-family: cleanator;' translate>for Better for Dust</h2>
 
 
+            <ion-list show-delete="true" ng-show="loginErrMsgs.length">
+                <ion-item class="item item-icon-left item-dark item-text-wrap">
+                    <ion-delete-button class="ion-close-round"
+                                       ng-click="loginErrMsgs.splice($index,1)"></ion-delete-button>
+                    <span ng-show="loginErrCode == 'loginBadCredential'"
+                          translate>Bad login/password.</span>
+                    <span ng-show="loginErrCode == 'loginBadConnection'"
+                          translate>Authentication service problem, please contact support@miapp.io</span>
+                    <span ng-show="loginErrCode == 'loginNoConnection'"
+                          translate>No connection, please verify your network.</span>
+                </ion-item>
+                <ion-item class="item item-icon-left item-dark item-text-wrap">
+                    [
+                    <small style="font-style: italic"
+                           ng-repeat="msg in loginErrMsgs track by $index"> &nbsp {{msg}}
+                    </small>
+                    ]
+                </ion-item>
+            </ion-list>
+
+
             <div class="row responsive-md">
                 <div class="col hidden-xs">&nbsp;</div>
                 <div class="col">
@@ -59,28 +80,6 @@
 
                                 </label>
 
-                                <div class="card" ng-show="loginErrCode == 'loginBadCredential'">
-                                    <div class="item item-assertive item-divider" translate>Bad login/password.</div>
-                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
-                                        {{error}}
-                                    </div>
-                                </div>
-                                <div class="card" ng-show="loginErrCode == 'loginBadConnection'">
-                                    <div class="item item-assertive item-divider" translate>Authentication service is
-                                        not reacheable, please contact support@miapp.io
-                                    </div>
-                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
-                                        {{error}}
-                                    </div>
-                                </div>
-                                <div class="card" ng-show="loginErrCode == 'loginNoConnection'">
-                                    <div class="item item-assertive item-divider" translate>No connection, please verify
-                                        your network.
-                                    </div>
-                                    <div class="item item-assertive item-text-wrap" ng-repeat="error in loginErrMsgs">
-                                        {{error}}
-                                    </div>
-                                </div>
                             </div>
 
 
@@ -102,68 +101,5 @@
             </div>
 
         </article>
-        <!--
-        <footer>
-          <nav class="navbar navbar-default navbar-fixed-bottom row" role="navigation" style="min-height: 0;">
-            <div class="col-xs-12">
-              <ul class="nav row">
-                <li class="col-xs-3" style="padding:0; text-align:center">&nbsp;</li>
-                <li class="col-xs-6" style="padding:0; text-align:center">
-                  &nbsp;
-
-                </li>
-                <li class="col-xs-3" style="padding:0; text-align:center">
-                  <a data-toggle="modal" data-target="#helpModal">
-                    <i class="glyphicon glyphicon-question-sign"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </footer>
-        -->
-
-        <!--
-          <div class="list">
-            <label class="item item-input">
-              <span class="input-label">Username</span>
-              <input type="text" ng-model="user.username">
-            </label>
-            <label class="item item-input">
-              <span class="input-label">Password</span>
-              <input type="password" ng-model="user.password">
-            </label>
-          </div>
-          <div class="padding">
-            <button class="button button-block button-positive" ng-click="signIn(user)">
-              Sign-In
-            </button>
-            <p class="text-center">
-              <a href="#/forgot-password">Forgot password</a>
-            </p>
-          </div>
-        -->
-
-        <!--
-
-            <script id="templates/forgot-password.html" type="text/ng-template">
-              <ion-view view-title="Forgot Password">
-                <ion-content padding="true">
-                  <p>
-                    Yeah this is just a demo showing how views can be shown without tabs, then you can navigate
-                    to views within tabs. Additionally, only one set of tabs needs to be written for all of the different views that should go inside the tabs. (Compared to written the same tab links in the footer of every view that's in a tab.)
-                  </p>
-                  <p>
-                    There's no username/password, just click
-                    the Sign-In button back a the sign-in view.
-                  </p>
-                  <p>
-                    Return to <a href="#/sign-in">Sign-In</a>.
-                  </p>
-                </ion-content>
-              </ion-view>
-            </script>
-
-        -->
     </ion-content>
 </ion-view>
